Add styles for second section

--- a/index.css
+++ b/index.css
@@ -18,10 +18,10 @@ html {
 
 .header {
     display: flex;
-    border: 2px solid red;
     justify-content: space-around;
     align-items: center;
     background-color: #1F2937;
+    padding: 10px;
 }
 
 .header .logo {
@@ -40,4 +40,42 @@ html {
     text-decoration: none;
     font-size: 18px;
     color: #E5E7EB
+}
+
+/* First section styles */
+
+.first-section-container {
+    display: flex;
+    background-color: #1F2937;
+    padding: 48px;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.first-section-container img{
+    width: 400px;
+    height: 200px;
+}
+
+.first-section-container .sign-up-card h1 {
+    font-size: 48px;
+    color: #F9FAF8;
+    font-weight: 900;
+    margin-bottom: 8px;
+}
+
+.first-section-container .sign-up-card p {
+    font-size: 18px;
+    color: #E5E7EB;
+    margin-bottom: 8px;
+}
+
+.first-section-container .sign-up-card button {
+    background-color: #3882F6;
+    border-radius: 6px;
+    padding: 6px 32px 6px 32px;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    border: none;
 }
