--- a/index.css
+++ b/index.css
@@ -79,3 +79,49 @@ html {
     text-align: center;
     border: none;
 }
+
+/* Second section styles */
+
+.second-section-container {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+.second-section-container .cards-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
+    margin-top: 30px;
+}
+
+.second-section-container h1 {
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    text-align: center;
+}
+
+.second-section-container .cards-container .card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 150px;
+}
+
+.second-section-container .cards-container .card img{
+    width: 150px;
+    height: 150px;
+    border-radius: 15px;
+    border: 4px solid #3B82F6;
+}
+
+.second-section-container .cards-container .card p{
+    color: #525B69;
+    text-align: center;
+    margin-top: 5px;
+}
+
+
