--- a/index.css
+++ b/index.css
@@ -54,7 +54,9 @@ body {
 }
 
 .content {
-    flex: 1 0 auto;
+    display: flex;
+    flex-direction: column;
+    flex: 1;
 }
 
 /* First section styles */
@@ -66,6 +68,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 40px;
+    flex: 1;
 }
 
 .first-section-container img{
@@ -107,6 +110,7 @@ body {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    flex: 1;
 }
 
 .second-section-container .cards-container {
@@ -153,6 +157,7 @@ body {
     align-items: center;
     background-color: #E5E7EB;
     padding: 48px;
+    flex: 1;
 }
 
 .third-section-container .quote-container {
@@ -180,6 +185,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 48px;
+    flex: 1;
 }
 
 .fourth-section-container .call-to-action-container {
@@ -190,7 +196,7 @@ body {
     padding: 32px;
     border-radius: 4px;
     color: white;
-    flex-basis: 1200px;
+    flex-basis: 900px;
 }
 
 .fourth-section-container .call-to-action-container .call-to-action-button button {
@@ -210,7 +216,6 @@ body {
     align-items: center;
     background-color: #1F2937;
     padding: 24px;
-    flex-shrink: 0;
 }
 
 .footer p {
